--- a/fronted/public/css/components/header.css
+++ b/fronted/public/css/components/header.css
@@ -2,7 +2,7 @@
     background-color: #39a900;
     width: 100%;
     height: 5rem;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     display: flex;
