--- a/fronted/public/css/variables.css
+++ b/fronted/public/css/variables.css
@@ -26,6 +26,7 @@
     --secundary-200:#FEF4CD;
     --secundary-100:#FEF8E1;
     --secundary-50:#FEFCF5;
+    --secundary-red: #ff4d4f;
 
     /* Basic color*/
     --white: #fff;
