--- a/fronted/public/views/homes/home-ciclo.html
+++ b/fronted/public/views/homes/home-ciclo.html
@@ -27,7 +27,7 @@
                 <p class="top-boxes__text"><a href="../ciclo_cultivo/visualizar_ciclo_cultivo.html">Visualizar ciclo cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p><a href="">Listar ciclo cultivo</a></p>
+                <p><a href="../ciclo_cultivo/listar_ciclo_cultivo.html">Listar ciclo cultivo</a></p>
             </div>
         </div>
         <div class="grid"></div>
