--- a/fronted/public/views/homes/home-cultivo-3.html
+++ b/fronted/public/views/homes/home-cultivo-3.html
@@ -31,7 +31,7 @@
                 <p class="top-boxes__text"><a href="../cultivo/visualizar_cultivo.html">Visualizar cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p><a href="">Listar cultivo</a></p>
+                <p><a href="../cultivo/listar_cultivo.html">Listar cultivo</a></p>
             </div>
         </div>
         <div class="grid"></div>
