--- a/fronted/public/views/homes/home-insumos.html
+++ b/fronted/public/views/homes/home-insumos.html
@@ -33,14 +33,12 @@
                 <p><a href="../insumos/visualizar_insumo.html">Visualizar insumo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p><a href="">Listar insumo</a></p>
+                <p><a href="../insumos/listar_insumo.html">Listar insumo</a></p>
             </div>
         </div>
         <!-- Contenedor de cuadros -->
         <div class="grid"></div>
     </div>
-    <!-- Botón -->
-    <a href="../insumos/descargar_insumo.html"><button class="button button--secondary">Reporte</button</a>
     
 </body>
 </html>
