--- a/fronted/public/views/homes/home-sensores.html
+++ b/fronted/public/views/homes/home-sensores.html
@@ -24,7 +24,7 @@
         <section class="top-boxes">
             <div class="top-boxes__item"><a href="../sensores/crear_sensor.html">Crear sensor</a></div>
             <div class="top-boxes__item"><a href="../sensores/visualizar_sensores.html">Visualizar sensor</a></div>
-            <div class="top-boxes__item"><a href="">Listar sensor</a></div>
+            <div class="top-boxes__item"><a href="../sensores/listar_sensor.html">Listar sensor</a></div>
         </section>
 
         <div class="grid"></div>
