--- a/fronted/public/views/homes/index.html
+++ b/fronted/public/views/homes/index.html
@@ -15,6 +15,7 @@
         <nav class="header__nav">
             <a href="../usuarios/registrar.html" class="header__link">Registrar usuario</a>
             <a href="../usuarios/listar.html" class="header__link">Listar usuarios</a>
+            <a href="../homes/home-ciclo.html" class="header__link">Ciclo Cultivo</a>
         </nav>
     </header>
 
