--- a/fronted/public/views/insumos/deshabilitar_insumo.html
+++ b/fronted/public/views/insumos/deshabilitar_insumo.html
@@ -27,11 +27,12 @@
     
                     <label class="form__label">Nombre insumo</label>
                     <input class="form__input insumo__input--nombre" type="text" name="nombreInsumo">
+
+                    <label class="form__label">Unidad de medida</label>
+                    <input class="form__input cultivo__input--size" type="text" name="unidadMedida">
                 </div>
     
                 <div class="form__column">
-                    <label class="form__label">Unidad de medida</label>
-                    <input class="form__input cultivo__input--size" type="text" name="unidadMedida">
     
                     <label class="form__label">Cantidad</label>
                     <input class="form__input insumo__input--cantidad" type="text" name="cantidad">
@@ -52,8 +53,8 @@
             </div>
     
             <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
-                <a href="#" class="btn__secundary">Habilitar</a>
+                <button type="submit" class="form__btn form__btn--registrar"><a href="actualizar_insumo.html">Actualizar</a></button>
+                <a href="datos_inusomo.html" class="btn__secundary">Habilitar</a>
             </div>
         </form>
     </main>
