--- a/fronted/public/views/sensores/deshabilitar_sensor.html
+++ b/fronted/public/views/sensores/deshabilitar_sensor.html
@@ -6,7 +6,6 @@
     <title>Deshabilitar Sensor</title>
     <link rel="stylesheet" href="/fronted/public/css/main.css">
     <script src="/fronted/public/views/components/header.js"></script>
-    <script src="/fronted/public/js/sensores/enviar.js"></script>
 </head>
 <body> 
     <header class="header"></header>
@@ -46,8 +45,8 @@
             </div>
     
             <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
-                <a href="#" class="btn__secundary">Habilitar</a>
+                <button type="submit" class="form__btn form__btn--registrar"><a href="actualizar_sensor.html">Actualizar</a></button>
+                <a href="datos_sensor.html" class="btn__secundary">Habilitar</a>
             </div>
         </form>
     </main>
