--- a/fronted/public/views/usuarios/listar.html
+++ b/fronted/public/views/usuarios/listar.html
@@ -39,10 +39,8 @@
                         <td>Carlos Rodríguez</td>
                         <td>300-123-4567</td>
                         <td>
-                            <div class="action-cell">
-                                <button class="btn btn-outline btn-sm">Editar</button>
-                                <button class="btn btn-danger btn-sm">Eliminar</button>
-                            </div>
+                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <button class="btn btn-danger btn-sm">Deshabilitar</button>
                         </td>
                     </tr>
                     <tr>
@@ -52,10 +50,8 @@
                         <td>María López</td>
                         <td>311-987-6543</td>
                         <td>
-                            <div class="action-cell">
-                                <button class="btn btn-outline btn-sm">Editar</button>
-                                <button class="btn btn-danger btn-sm">Eliminar</button>
-                            </div>
+                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <button class="btn btn-danger btn-sm">Deshabilitar</button>
                         </td>
                     </tr>
                     <tr>
@@ -65,10 +61,8 @@
                         <td>Juan Pérez</td>
                         <td>315-678-9012</td>
                         <td>
-                            <div class="action-cell">
-                                <button class="btn btn-outline btn-sm">Editar</button>
-                                <button class="btn btn-danger btn-sm">Eliminar</button>
-                            </div>
+                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <button class="btn btn-danger btn-sm">Deshabilitar</button>
                         </td>
                     </tr>
                     <tr>
@@ -78,10 +72,8 @@
                         <td>Ana Martínez</td>
                         <td>320-345-6789</td>
                         <td>
-                            <div class="action-cell">
-                                <button class="btn btn-outline btn-sm">Editar</button>
-                                <button class="btn btn-danger btn-sm">Eliminar</button>
-                            </div>
+                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <button class="btn btn-danger btn-sm">Deshabilitar</button>
                         </td>
                     </tr>
                     <tr>
@@ -91,15 +83,13 @@
                         <td>Pedro Gómez</td>
                         <td>310-789-0123</td>
                         <td>
-                            <div class="action-cell">
-                                <button class="btn btn-outline btn-sm">Editar</button>
-                                <button class="btn btn-danger btn-sm">Eliminar</button>
-                            </div>
+                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <button class="btn btn-danger btn-sm">Deshabilitar</button>
                         </td>
                     </tr>
                 </tbody>
             </table>
-                <a href="/fronted/public/views/usuarios/imprimir.html" class="table-container__button-container-link">
+                <a href="/fronted/public/views/components/imprimir.html" class="table-container__button-container-link">
                     <button class="btn-print">🖨️ Imprimir</button>
                 </a>
             
