--- a/fronted/public/views/ciclo_cultivo/actualizar_ciclo_cultivo.html
+++ b/fronted/public/views/ciclo_cultivo/actualizar_ciclo_cultivo.html
@@ -51,8 +51,8 @@
             </div>
     
             <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
-                <a href="#" class="btn__secundary">Cancelar</a>
+                <button type="submit" class="form__btn form__btn--registrar"><a href="datos_ciclo_cultivo.html">Actualizar</a></button>
+                <a href="../homes/home-ciclo.html" class="btn__secundary">Cancelar</a>
             </div>
         </form>
     </main>
