--- a/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html
+++ b/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html
@@ -54,7 +54,7 @@
     
             <div class="form__btn-group">
                 <button type="submit" class="form__btn form__btn--registrar">Crear</button>
-                <a href="#" class="btn__secundary">Cancelar</a>
+                <a href="../homes/home-ciclo.html" class="btn__secundary">Cancelar</a>
             </div>
         </form>
     </main>
