--- a/fronted/public/views/ciclo_cultivo/datos_ciclo_cultivo.html
+++ b/fronted/public/views/ciclo_cultivo/datos_ciclo_cultivo.html
@@ -51,8 +51,8 @@
             </div>
     
             <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
-                <a href="#" class="btn__secundary">Deshabilitar</a>
+                <button type="submit" class="form__btn form__btn--registrar"><a href="actualizar_ciclo_cultivo.html">Actualizar</a></button>
+                <a href="deshabilitar_ciclo_cultivo.html" class="btn__secundary">Deshabilitar</a>
             </div>
         </form>
     </main>
