--- a/fronted/public/views/components/header.html
+++ b/fronted/public/views/components/header.html
@@ -1,4 +1,4 @@
 <header class="header">
-    <h1>Lembo SGAL</h1>
+    <a href="../homes/index.html"><h1>Lembo SGAL</h1></a>
     <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="header__logo">
 </header>
