--- a/fronted/public/views/components/imprimir.html
+++ b/fronted/public/views/components/imprimir.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imprimir usuarios</title>
-    <link rel="stylesheet" href="/fronted/public/css/pages/usuarios/imprimir.css">
+    <!-- <link rel="stylesheet" href="/fronted/public/css/pages/usuarios/imprimir.css"> -->
+    <link rel="stylesheet" href="/fronted/public/css/main.css">
+    <script src="/fronted/public/views/components/header.js"></script>
 </head>
 <body>
-    <header class="header">
-        <h1 class="header__title">Lembo</h1>
-        <div class="header__logo">
-            <img src="../img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo" class="header__logo-image">
-        </div>
-    </header>
+    <header class="header"></header>
 
     <main class="container">
         <div class="success-message">
