--- a/fronted/public/views/cultivo/crear_cultivo.html
+++ b/fronted/public/views/cultivo/crear_cultivo.html
@@ -50,7 +50,7 @@
     
             <div class="form__btn-group">
                 <button type="submit" class="form__btn form__btn--registrar">Crear</button>
-                <a href="#" class="btn__secundary">Cancelar</a>
+                <a href="../homes/home-cultivo-3.html" class="btn__secundary">Cancelar</a>
             </div>
         </form>
     </main>
