--- a/fronted/public/views/cultivo/deshabilitar_cultivo.html
+++ b/fronted/public/views/cultivo/deshabilitar_cultivo.html
@@ -49,8 +49,8 @@
             </div>
     
             <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
-                <a href="#" class="btn__secundary">Habilitar</a>
+                <button type="submit" class="form__btn form__btn--registrar"><a href="actualizar_cultivo.html">Actualizar</a></button>
+                <a href="datos_cultivo.html" class="btn__secundary">Habilitar</a>
             </div>
         </form>
     </main>
