--- a/fronted/public/views/sensores/actualizar_sensor.html
+++ b/fronted/public/views/sensores/actualizar_sensor.html
@@ -46,8 +46,8 @@
             </div>
     
             <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
-                <a href="#" class="btn__secundary">Cancelar</a>
+                <button type="submit" class="form__btn form__btn--registrar"><a href="datos_sensor.html">Actualizar</a></button>
+                <a href="../homes/home-sensores.html" class="btn__secundary">Cancelar</a>
             </div>
         </form>
     </main>
