--- a/fronted/public/views/sensores/crear_sensor.html
+++ b/fronted/public/views/sensores/crear_sensor.html
@@ -47,7 +47,7 @@
     
             <div class="form__btn-group">
                 <button type="submit" class="form__btn form__btn--registrar">Crear</button>
-                <a href="#" class="btn__secundary">Cancelar</a>
+                <a href="../homes/home-sensores.html" class="btn__secundary">Cancelar</a>
             </div>
         </form>
     </main>
