--- a/fronted/public/views/sensores/datos_sensor.html
+++ b/fronted/public/views/sensores/datos_sensor.html
@@ -46,8 +46,8 @@
             </div>
     
             <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
-                <a href="#" class="btn__secundary">Deshabilitar</a>
+                <button type="submit" class="form__btn form__btn--registrar"><a href="actualizar_sensor.html">Actualizar</a></button>
+                <a href="deshabilitar_sensor.html" class="btn__secundary">Deshabilitar</a>
             </div>
         </form>
     </main>
