--- a/fronted/public/views/sensores/listar_sensor.html
+++ b/fronted/public/views/sensores/listar_sensor.html
@@ -24,15 +24,15 @@
             <table class="table-container__data-table">
                 <thead>
                     <tr>
-                        <th>ID / Código</th>
-                        <th>Nombre</th>
-                        <th>Tipo de Sensor</th>
-                        <th>Valor Actual</th>
-                        <th>Unidad</th>
-                        <th>Estado</th>
-                        <th>Ubicación</th>
-                        <th>Última Lectura</th>
-                        <th>Acciones</th>
+                        <th class="table-container__data-table-header">ID / Código</th>
+                        <th class="table-container__data-table-header">Nombre</th>
+                        <th class="table-container__data-table-header">Tipo de Sensor</th>
+                        <th class="table-container__data-table-header">Valor Actual</th>
+                        <th class="table-container__data-table-header">Unidad</th>
+                        <th class="table-container__data-table-header">Estado</th>
+                        <th class="table-container__data-table-header">Ubicación</th>
+                        <th class="table-container__data-table-header">Última Lectura</th>
+                        <th class="table-container__data-table-header">Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -46,7 +46,7 @@
                         <td>Invernadero 1</td>
                         <td>2025-04-06 10:45</td>
                         <td>
-                            <button class="btn btn-outline btn-sm">Editar</button>
+                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
@@ -60,7 +60,7 @@
                         <td>Parcela 2</td>
                         <td>2025-04-06 10:42</td>
                         <td>
-                            <button class="btn btn-outline btn-sm">Editar</button>
+                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
@@ -74,7 +74,7 @@
                         <td>Parcela 3</td>
                         <td>2025-04-06 10:40</td>
                         <td>
-                            <button class="btn btn-outline btn-sm">Editar</button>
+                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
@@ -82,9 +82,9 @@
             </table>
 
             <div class="table-container__button-container">
-                <a href="/fronted/public/views/sensores/imprimir.html" class="table-container__button-container-link">
+                <a href="/fronted/public/views/components/imprimir.html" class="table-container__button-container-link">
                     <button class="btn-print">🖨️ Imprimir</button>
-                </a>
+                </a>    
             </div>
         </section>
     </main>
