--- a/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html
+++ b/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html
@@ -58,6 +58,6 @@
             </div>
         </form>
     </main>
-    <script src="/fronted/public/js/ciclo_cultivo/validacion_datos.js"></script>
+    <!-- <script src="/fronted/public/js/ciclo_cultivo/validacion_datos.js"></script> -->
 </body>
 </html>
