--- a/fronted/public/views/cultivo/crear_cultivo.html
+++ b/fronted/public/views/cultivo/crear_cultivo.html
@@ -26,12 +26,12 @@
                     <input class="form__input cultivo__input--name" type="text" name="cultivoName">
     
                     <label class="form__label">Identificador cultivo</label>
-                    <input class="form__input cultivo__input--ID" type="date" name="cultivoID">
+                    <input class="form__input cultivo__input--ID" type="text" name="cultivoID">
                 </div>
     
                 <div class="form__column">
                     <label class="form__label">Tamaño</label>
-                    <input class="form__input cultivo__input--size" type="date" name="size">
+                    <input class="form__input cultivo__input--size" type="text" name="size">
     
                     <label class="form__label">Ubicacion</label>
                     <input class="form__input cultivo__input--location" type="text" name="location">
@@ -54,6 +54,6 @@
             </div>
         </form>
     </main>
-    <script src="/fronted/public/js/cultivos/validacion_datos.js"></script>
+    <!-- <script src="/fronted/public/js/cultivos/validacion_datos.js"></script> -->
 </body>
 </html>
