--- a/fronted/public/views/insumos/crear_inusomo.html
+++ b/fronted/public/views/insumos/crear_inusomo.html
@@ -1,63 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos Insumo</title>
-    <link rel="stylesheet" href="/fronted/public/css/main.css">
-    <script src="/fronted/public/views/components/header.js"></script>
-    <script src="/fronted/public/js/insumo/enviar.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Datos Insumo</title>
+  <link rel="stylesheet" href="/fronted/public/css/main.css">
+  <script src="/fronted/public/views/components/header.js" defer></script>
+  <script src="/fronted/public/js/insumo/enviar.js" defer></script>
 </head>
-<body> 
-    <header class="header"></header>
-    <main class="form-container">
-        <form class="form" action="http://localhost:3000/insumos" method="POST" enctype="multipart/form-data">
-            <h2 class="form__title">Datos Insumos</h2>
-    
-            <div class="form__row">
-                <div class="form__column">
-                    <label class="form__label">Cargar imagen</label>
-                    <input class="form__input form__input--imagen" type="file" name="image" id="image">
-    
-                    <label class="form__label">ID insumo</label>
-                    <input class="form__input insumo__input--ID" type="text" name="idInsumo">
-    
-                    <label class="form__label">Tipo insumo</label>
-                    <input class="form__input insumo__input--type" type="text" name="tipoInsumo">
-    
-                    <label class="form__label">Nombre insumo</label>
-                    <input class="form__input insumo__input--nombre" type="text" name="nombreInsumo">
-
-                    <label class="form__label">Unidad de medida</label>
-                    <input class="form__input cultivo__input--size" type="text" name="unidadMedida">
-                </div>
-    
-                <div class="form__column">
-    
-                    <label class="form__label">Cantidad</label>
-                    <input class="form__input insumo__input--cantidad" type="text" name="cantidad">
-
-                    <label class="form__label">Valor unitario</label>
-                    <input class="form__input insumo__input--unitario" type="text" name="valorUnitario">
-    
-                    <label class="form__label">Descripción</label>
-                    <input class="form__input insumo__input--descripcion" type="text" name="description">
-    
-                    <label class="form__label">Estado (activo / inactivo)</label>
-                    <select name="state" class="form__input insumo__input--estado">
-                        <option value="">Seleccione una opción</option>
-                        <option value="Activo">Activo</option>
-                        <option value="Inactivo">Inactivo</option>
-                    </select>
-                </div>
-            </div>
-    
-            <div class="form__btn-group">
-                <button type="submit" class="form__btn form__btn--registrar">Crear</button>
-                <a href="../homes/home-insumos.html" class="btn__secundary">Cancelar</a>
-            </div>
-        </form>
-    </main>
-    <script src="/fronted/public/js/insumo/validacion_datos.js"></script>
+<body>
+  <header class="header"></header>
+  <main class="form-container">
+    <form class="form">
+      <h2 class="form__title">Datos Insumos</h2>
+      <div class="form__row">
+        <div class="form__column">
+          <label class="form__label">Cargar imagen</label>
+          <input class="form__input form__input--imagen" type="file" name="image" id="image">
+          <label class="form__label">ID insumo</label>
+          <input class="form__input insumo__input--ID" type="text" name="idInsumo">
+          <label class="form__label">Tipo insumo</label>
+          <input class="form__input insumo__input--type" type="text" name="tipoInsumo">
+          <label class="form__label">Nombre insumo</label>
+          <input class="form__input insumo__input--nombre" type="text" name="nombreInsumo">
+          <label class="form__label">Unidad de medida</label>
+          <input class="form__input cultivo__input--size" type="text" name="unidadMedida">
+        </div>
+        <div class="form__column">
+          <label class="form__label">Cantidad</label>
+          <input class="form__input insumo__input--cantidad" type="text" name="cantidad">
+          <label class="form__label">Valor unitario</label>
+          <input class="form__input insumo__input--unitario" type="text" name="valorUnitario">
+          <label class="form__label">Descripción</label>
+          <input class="form__input insumo__input--descripcion" type="text" name="descripcion">
+          <label class="form__label">Estado (activo / inactivo)</label>
+          <select name="estado" class="form__input insumo__input--estado">
+            <option value="">Seleccione una opción</option>
+            <option value="Activo">Activo</option>
+            <option value="Inactivo">Inactivo</option>
+          </select>
+        </div>
+      </div>
+      <div class="form__btn-group">
+        <button type="submit" class="form__btn form__btn--registrar">Crear</button>
+        <a href="../homes/home-insumos.html" class="btn__secundary">Cancelar</a>
+      </div>
+    </form>
+  </main>
 </body>
 </html>
