--- a/fronted/public/views/sensores/crear_sensor.html
+++ b/fronted/public/views/sensores/crear_sensor.html
@@ -11,7 +11,7 @@
 <body> 
     <header class="header"></header>
     <main class="form-container">
-        <form class="form" action="http://localhost:3000/sensores" method="POST" enctype="multipart/form-data">
+        <form class="form" action="http://localhost:3000/sensores" method="POST">
             <h2 class="form__title">Datos sensores</h2>
     
             <div class="form__row">
@@ -51,6 +51,6 @@
             </div>
         </form>
     </main>
-    <script src="/fronted/public/js/sensores/validacion_datos.js"></script>
+    <!-- <script src="/fronted/public/js/sensores/validacion_datos.js"></script> -->
 </body>
 </html>
