--- a/fronted/public/views/usuarios/registrar.html
+++ b/fronted/public/views/usuarios/registrar.html
@@ -78,6 +78,6 @@
 
 </main>
 
-<script src="/fronted/public/js/usuarios/registrar/script.js"></script>
+<!-- <script src="/fronted/public/js/usuarios/registrar/script.js"></script> -->
 </body>
 </html>
